@@ -7,6 +7,7 @@
 5. Fix custom combobox being unset for plugin settings pages.
 6. Allow settings pages to use full width.
 7. Fix missing text in YouTube comboboxes.
+8. Use custom combobox in 'Extras' pages.
 
 5.0.3
 -----
